--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "news-app-angular": {
+    "news-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/news-app-angular",
+            "outputPath": "dist/news-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -43,7 +43,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -66,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "news-app-angular:build"
+            "browserTarget": "news-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "news-app-angular:build:production"
+              "browserTarget": "news-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "news-app-angular:build"
+            "browserTarget": "news-app:build"
           }
         },
         "test": {
@@ -111,7 +110,7 @@
         }
       }
     },
-    "news-app-angular-e2e": {
+    "news-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -120,11 +119,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "news-app-angular:serve"
+            "devServerTarget": "news-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "news-app-angular:serve:production"
+              "devServerTarget": "news-app:serve:production"
             }
           }
         },
